assign each thread 4 slices ~6x speed up

--- a/prog1_mandelbrot_threads/Makefile
+++ b/prog1_mandelbrot_threads/Makefile
@@ -1,6 +1,6 @@
 
 CXX=g++ -m64
-CXXFLAGS=-I../common -Iobjs/ -O3 -std=c++11 -Wall -fPIC -g
+CXXFLAGS=-I../common -Iobjs/ -O3 -std=c++11 -Wall -fPIC
 
 APP_NAME=mandelbrot
 OBJDIR=objs
@@ -9,6 +9,9 @@ COMMONDIR=../common
 PPM_CXX=$(COMMONDIR)/ppm.cpp
 PPM_OBJ=$(addprefix $(OBJDIR)/, $(subst $(COMMONDIR)/,, $(PPM_CXX:.cpp=.o)))
 
+THREADS=2 3 4 5 6 7 8
+VIEW=2
+OUTPUT_FILE=problem1_view_$(VIEW).txt
 
 default: $(APP_NAME)
 
@@ -33,3 +36,10 @@ $(OBJDIR)/%.o: $(COMMONDIR)/%.cpp
 
 $(OBJDIR)/main.o: $(COMMONDIR)/CycleTimer.h
 
+run_all_threads: $(APP_NAME)
+	@echo "Running mandelbrot with various thread counts..." > $(OUTPUT_FILE)
+	@for t in $(THREADS); do \
+		echo "Threads: $$t" >> $(OUTPUT_FILE); \
+		./$(APP_NAME) --threads $$t --view $(VIEW) >> $(OUTPUT_FILE); \
+	done
+	@echo "All results saved to $(OUTPUT_FILE)"
